--- a/Essays/间隔重复在课堂上是行不通的.md
+++ b/Essays/间隔重复在课堂上是行不通的.md
@@ -10,7 +10,7 @@ By definition, [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition
 
 This does not prevent some great teachers asking the obvious question: Could [SuperMemo](https://supermemo.guru/wiki/SuperMemo) or [Anki](https://supermemo.guru/wiki/Anki) improve student performance even if it violated the basic principles of spaced repetition itself? Even the visionary mind of [George Zonnios](https://supermemo.guru/wiki/George_Zonnios) tried spaced repetition in a classroom (see his [conclusions](https://georgios.blog/spaced-repetition-classroom/)). It is natural. For a teacher who cares about his students, spaced repetition is like a natural gift of better learning.
 
-这并不妨碍一些伟大的教师提出一个明显的问题。即使违反了间隔重复本身的基本原则，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 或 [Anki](https://supermemo.guru/wiki/Anki) 能否提高学生的成绩？甚至连 [George Zonnios](https://supermemo.guru/wiki/George_Zonnios) 这个有远见的人也在课堂上尝试了间隔重复法（见他的[结论](https://georgios.blog/spaced-repetition-classroom/)）。这是很自然的。对于一个关心学生的老师来说，间隔重复就像一个自然的礼物，可以让学生更好地学习。
+这并不妨碍一些伟大的教师提出一个明显的问题。即使违反了间隔重复本身的基本原则，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 或 [Anki](https://supermemo.guru/wiki/Anki) 能否提高学生的成绩？甚至连 [George Zonnios](https://supermemo.guru/wiki/George_Zonnios) 这样有远见的人也在课堂上尝试了间隔重复法（见他的[结论](https://georgios.blog/spaced-repetition-classroom/)）。这是很自然的。对于一个关心学生的老师来说，间隔重复就像一个自然的礼物，可以让学生更好地学习。
 
 ## 课堂实验
 
@@ -18,9 +18,9 @@ This does not prevent some great teachers asking the obvious question: Could [Su
 
 > The subconscious is a black-box back-office you can deliberately prime with [study cards](https://supermemo.guru/wiki/Item)
 
-***Tanagrabeast*** 是一个高中老师的昵称，他试图在课堂上分享[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的好处。它清楚地表明了热爱和激情可以使不可能的事情发生：[课堂上间隔重复的一年](https://www.lesswrong.com/posts/Ww2dxwWpSfkQB4NZb/a-year-of-spaced-repetition-software-in-the-classroom)。一年后，同一作者提供了一个更有条理的评估，对优点和缺点进行了诚实的分析。该文显示了对学习理论的广泛了解，甚至引用了卡尼曼对[概念计算](https://supermemo.guru/wiki/Conceptual_computation)的描述。[课堂上第二年的间隔重复学习](https://www.lesswrong.com/posts/dtCfxYubZgRnEkGpQ/a-second-year-of-spaced-repetition-software-in-the-classroom)产生了一个结论，这个结论构成了[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的基础：
+***Tanagrabeast*** 是一个高中老师的昵称，他试图在课堂上分享[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的好处。这清楚地表明了热爱和激情可以使不可能的事情发生：[课堂上间隔重复的一年](https://www.lesswrong.com/posts/Ww2dxwWpSfkQB4NZb/a-year-of-spaced-repetition-software-in-the-classroom)。一年后，同一作者提供了一个更有条理的评估，对优点和缺点进行了诚实的分析。该文显示了对学习理论的广泛了解，甚至引用了卡尼曼对[概念计算](https://supermemo.guru/wiki/Conceptual_computation)的描述。[课堂上第二年的间隔重复学习](https://www.lesswrong.com/posts/dtCfxYubZgRnEkGpQ/a-second-year-of-spaced-repetition-software-in-the-classroom)产生了一个结论，这个结论构成了[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的基础：
 
-> 潜意识是一个黑匣子的后台，你可以有意地用[学习卡片](https://supermemo.guru/wiki/Item)来激发它。
+> 潜意识是一个黑箱的后台，你可以有意地用[学习卡片](https://supermemo.guru/wiki/Item)来激发它。
 
 Compare: [Inevitability of incremental reading](https://supermemo.guru/wiki/Inevitability_of_incremental_reading)
 
@@ -30,7 +30,7 @@ Compare: [Inevitability of incremental reading](https://supermemo.guru/wiki/Inev
 
 The message that oozes from the teacher's text is that practice easily uncovers all the truths discussed at [SuperMemo Guru](https://supermemo.guru/wiki/SuperMemo_Guru). This teacher could write the same articles with the same conclusions. Only the terminology would differ. There is only one stumbling block to full enlightenment. The entire analysis is made with an important assumption: *"school is good, school is inevitable, and school is here to stay, so we better learn to live with it"*. It is clear that the mere design of school makes the whole effort incredibly ineffective. However, for a teacher full of love for his/her students, this is no obstacle. They say, love is blind.
 
-从这位老师的文字中渗透出的信息是：实践很容易揭开 [SuperMemo Guru](https://supermemo.guru/wiki/SuperMemo_Guru) 讨论的所有真理。这位老师可以写同样的文章，得出同样的结论。只有术语会有所不同。完全开悟的绊脚石只有一个。整个分析是在一个重要的假设下进行的：*"学校是好的，学校是不可避免的，学校是要留下来的，所以我们最好学会和它一起生活 "*。很显然，仅仅是学校的设计就使整个努力变得无比无效。然而，对于一个对学生充满爱的老师来说，这并不是什么障碍。他们说，爱是盲目的。
+从这位老师的文字中透露出的信息是：实践很容易揭开 [SuperMemo Guru](https://supermemo.guru/wiki/SuperMemo_Guru) 讨论的所有真理。这位老师可以写同样的文章，得出同样的结论。只有术语会有所不同。完全开悟的绊脚石只有一个。整个分析是在一个重要的假设下进行的：*"学校是好的，学校是不可避免的，学校是要持续下去的，所以我们最好学会和它一起共存"*。很显然，仅仅是学校的设计就使整个努力变得无比无效。然而，对于一个对学生充满热爱的老师来说，这并不是什么障碍。他们说，爱是盲目的。
 
 To say that good critical analysis based on a small sample is an inferior effort is a [bad school habit](https://supermemo.guru/wiki/Bad_school_habit). The text is a goldmine of ideas but adds a bit of well-schooled self-deprecation:
 
@@ -38,7 +38,7 @@ To say that good critical analysis based on a small sample is an inferior effort
 
 将基于小样本的良好批判分析称之为一种低劣的努力是一种[学校的坏习惯](https://supermemo.guru/wiki/Bad_school_habit)。这段文字是一个思想的金矿，但又加上了一点学究式的自嘲：
 
-> 以前的研究在这一点上已经很有说服力了，我想不出一个实际的方法来运行一个对照组或 "蒙蔽 "自己
+> 以前的研究在这一点上已经很有说服力了，我想不出一个实际的方法来运行一个对照组或 "蒙蔽" 自己
 
 ## 教育的历史
 
@@ -50,7 +50,7 @@ History of education is like a pendulum in which we often swing from one extreme
 >
 > 
 >
-> *"操练和扼杀"*是今天的教师每当使用死记硬背的学习方法时脑子里听到的一句话，因为我们已经通过培训和好莱坞受到了严重的制约，认为这就是坏教学的样子。这可能是教育史上最伟大的过度修正之一。我并不是说我们应该把不加修饰的重复作为我们的第一手段，但是如果没有某种复述，学习和记忆就不会发生，而我们已经把使用最直接的方法作为禁忌。我们就像在枪战中的士兵，他们决定我们只应该通过跳弹来杀人
+> *"操练和扼杀"*是今天的教师每当使用死记硬背的学习方法时脑子里听到的一句话，因为我们已经通过培训和好莱坞受到了严重的制约，认为这就是糟糕的教学的样子。这可能是教育史上最伟大的过度修正之一。我并不是说我们应该把不加修饰的重复作为我们的第一手段，但是如果没有某种复述，学习和记忆就不会发生，而我们已经把使用最直接的方法作为禁忌。我们就像在枪战中的士兵，他们决定我们只应该通过跳弹来杀人
 
 The pendulum is a useless pointer in determining the value of memorization. There are pieces of knowledge that are worth preserving with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), and pieces that are not worth the effort. The latter form a vast majority of human knowledge. The former are golden nuggets that are too precious to expose to the risk of forgetting through disuse.
 
@@ -60,7 +60,7 @@ The pendulum is a useless pointer in determining the value of memorization. Ther
 
 Blame game is inherent to schooling. In the presented case it necessitated a primary violation of the rules of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). If the study had a control group, and was blinded, we could simply toss away results. The experiment had little to do with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). It was more about teacher's effort to maximize memory in a classroom with a proxy of "group review". To me, the prime value of the experiment is to measurably reveal the ordeals of students and teachers alike. The teacher who is always given a bad hand, does not seem to blame the system. The system is a constant in the equation, this is why the teacher ultimately blames himself/herself for the outcomes:
 
-指责游戏是学校教育所固有的。在本案中，它必须首先违反[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的规则。如果该研究有一个对照组，并且是盲目的，我们可以简单地抛开结果。这个实验与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)没有什么关系。它更多的是关于教师在课堂上通过代理 "小组复习 "来最大化记忆的努力。对我来说，这个实验的首要价值是可衡量地揭示了学生和教师的苦难。那个总是被打倒的老师，似乎并不责怪系统。系统是方程中的一个常数，这就是为什么老师最终把结果归咎于他/她自己：
+指责游戏是学校教育所固有的。在本案例中，它使对[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)规则的违反变得必然。如果该研究有一个对照组，并且是不知情的，我们可以简单地抛开结果。这个实验与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)没有什么关系。它更多的是关于教师在课堂上通过代理 "小组复习" 来最大化记忆的努力。对我来说，这个实验的首要价值是可衡量地揭示了学生和教师的苦难。那个总是被打倒的老师，似乎并不责怪系统。系统是方程中的一个常数，这就是为什么老师最终把结果归咎于他/她自己：
 
 > I did not make Anki decks, assign them to my students to study independently, and then quiz them on the content. With honors classes I taught in previous years I think that might have worked, but I know my current students too well. **Only about 10% of them would have done it**, and **the rest would have blamed me for their failing grades** - with some justification, in my opinion
 >
@@ -90,7 +90,7 @@ Every teacher knows students with absolutely no memory. Those students can cram 
 >
 > 
 >
-> 我的几个学生有一个令人印象深刻的，**经验验证的零[吸收率](https://supermemo.guru/wiki/Acquisition_rate)**。我并没有夸大其词。我可以将测试前的成绩与测试后的成绩进行比较，发现绝对没有改善，即使是我们广泛涉及的容易的客观内容也是如此。
+> 我的几个学生有一个令人印象深刻的，**经验验证的零[习得率](https://supermemo.guru/wiki/Acquisition_rate)**。我并没有夸大其词。我可以将测试前的成绩与测试后的成绩进行比较，发现绝对没有改善，即使是我们广泛涉及的容易的客观内容也是如此。
 
 School may have a negligible impact on long-term memory. The horrible inefficiency of learning at school can be measured with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) tools
 
@@ -116,17 +116,17 @@ If that healthy "inability to care" affects a large fraction of teenagers, we qu
 
 ### Baby steps
 
-### 小步子
+### 小步
 
 The importance of a short [semantic distance](https://supermemo.guru/wiki/Semantic_distance) is expressed with the term *"baby steps"*, which is worth memorizing for the sake of better elucidation of the harm of schooling:
 
-短暂的[语义距离](https://supermemo.guru/wiki/Semantic_distance)的重要性是用*"小步 "*这个词来表达的，为了更好地阐明学校教育的危害，这个词是值得记忆的：
+短[语义距离](https://supermemo.guru/wiki/Semantic_distance)的重要性是用*"小步"*这个词来表达的，为了更好地阐明学校教育的危害，这个词是值得记忆的：
 
 > A good card for an **apathetic learner** will feel unneeded on creation, because it's only **a baby step away** from what they already knew
 >
 > 
 >
-> 对于一个**冷漠的学习者**来说，一张好的卡片在创作上会觉得不需要，因为它离他们已经知道的东西只有**个小步**了
+> 对于一个**冷漠的学习者**来说，一张好的卡片在创作上会觉得不需要，因为它离他们已经知道的东西只有个**小步**了
 
 It is worth noting that apathy should not be confused with [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness). What looks like apathy to a teacher may simply be a reflection of strong interests that find no outlet in the classroom.
 
@@ -136,7 +136,7 @@ It is worth noting that apathy should not be confused with [learned helplessness
 
 What is seen as apathy or inattention can also be associated with an inherent problem of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). The schooled approach will ask for accumulating [items](https://supermemo.guru/wiki/Item) and reviewing them systematically. This might be the key reason for spaced repetition failure where users swear it does not work for them. Without [pleasure of learning](https://supermemo.guru/wiki/Pleasure_of_learning) and specific goals, repetitions became automatic reflexes of the mind. For users who make repetitions on the go, robotization of learning is worst. This is why I am not a fan of mobile SuperMemo. I tried that in the era of Pocket PC. Today, there is a simple remedy: [incremental reading](https://supermemo.guru/wiki/Incremental_reading). Interleaving spaced repetition with new reading. Combining review with novelty.
 
-被视为冷漠或注意力不集中的情况也可能与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的内在问题有关。学校的方法会要求积累[问答卡片](https://supermemo.guru/wiki/Item)，并系统地复习它们。这可能是间隔重复失败的关键原因，用户发誓这对他们不起作用。没有[学习的乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)和具体的目标，重复就成了头脑中的自动反射。对于那些在旅途中进行重复的用户来说，学习的机械化是最糟糕的。这就是为什么我不喜欢移动版的 SuperMemo。我在掌上电脑时代就尝试过。今天，有一个简单的补救办法。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)。将间隔重复与新的阅读交织在一起。将复习与新奇相结合。
+被视为冷漠或注意力不集中的情况也可能与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的内在问题有关。学校的方法会要求积累[问答卡片](https://supermemo.guru/wiki/Item)，并系统地复习它们。这可能是间隔重复失败的关键原因，用户发誓这对他们不起作用。没有[学习的乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)和具体的目标，重复就成了头脑中的自动反射。对于那些在旅途中进行重复的用户来说，学习的机械化是最糟糕的。这就是为什么我不喜欢移动版的 SuperMemo。我在掌上电脑时代就尝试过。今天，有一个简单的补救办法：[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)。将间隔重复与新的阅读交织在一起。将复习与新奇相结合。
 
 > Her name is Apathy, and she doesn't give a shit. You know how you can zone out and review something three or four times without processing it, but then you realize, kick yourself in gear, and engage yÍour faculties, pushing it into your mind? You have to care, just a little bit. To keep it up, you have to care a little bit more. It's not always easy to find and sustain that spark of caring, because the learning target might be only indirectly instrumental to your goals
 >
