--- a/Essays/间隔重复在课堂上是行不通的.md
+++ b/Essays/间隔重复在课堂上是行不通的.md
@@ -1,3 +1,5 @@
+#! https://zhuanlan.zhihu.com/p/375536775
+![Image](https://pic4.zhimg.com/80/v2-2094e51cbb241159a1373cfb85f5f249.png)
 # 间隔重复在课堂上是行不通的
 
 > 原文：https://supermemo.guru/wiki/Spaced_repetition_does_not_work_in_a_classroom
@@ -10,7 +12,7 @@ By definition, [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition
 
 This does not prevent some great teachers asking the obvious question: Could [SuperMemo](https://supermemo.guru/wiki/SuperMemo) or [Anki](https://supermemo.guru/wiki/Anki) improve student performance even if it violated the basic principles of spaced repetition itself? Even the visionary mind of [George Zonnios](https://supermemo.guru/wiki/George_Zonnios) tried spaced repetition in a classroom (see his [conclusions](https://georgios.blog/spaced-repetition-classroom/)). It is natural. For a teacher who cares about his students, spaced repetition is like a natural gift of better learning.
 
-这并不妨碍一些伟大的教师提出一个明显的问题。即使违反了间隔重复本身的基本原则，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 或 [Anki](https://supermemo.guru/wiki/Anki) 能否提高学生的成绩？甚至连 [George Zonnios](https://supermemo.guru/wiki/George_Zonnios) 这样有远见的人也在课堂上尝试了间隔重复法（见他的[结论](https://georgios.blog/spaced-repetition-classroom/)）。这是很自然的。对于一个关心学生的老师来说，间隔重复就像一个自然的礼物，可以让学生更好地学习。
+这并不妨碍一些伟大的教师提出一个明显的问题：即使违反了间隔重复本身的基本原则，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 或 [Anki](https://supermemo.guru/wiki/Anki) 能否提高学生的成绩？甚至连 [George Zonnios](https://supermemo.guru/wiki/George_Zonnios) 这样有远见的人也在课堂上尝试了间隔重复法（见他的[结论](https://georgios.blog/spaced-repetition-classroom/)）。这是很自然的。对于一个关心学生的老师来说，间隔重复就像一个自然的礼物，可以让学生更好地学习。
 
 ## 课堂实验
 
@@ -54,7 +56,7 @@ History of education is like a pendulum in which we often swing from one extreme
 
 The pendulum is a useless pointer in determining the value of memorization. There are pieces of knowledge that are worth preserving with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), and pieces that are not worth the effort. The latter form a vast majority of human knowledge. The former are golden nuggets that are too precious to expose to the risk of forgetting through disuse.
 
-在确定记忆的价值方面，钟摆是一个无用的指针。有一些知识是值得用[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)来保存的，也有一些知识是不值得努力的。后者构成了人类知识的绝大部分。前者是如同黄金珍贵，不值得冒着因不使用而被遗忘的风险。
+在确定记忆的价值方面，钟摆是一个无用的指针。有一些知识值得用[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)来保存，也有一些知识不值得努力。后者构成了人类知识的绝大部分。前者是如同黄金珍贵，不值得冒着因不使用而被遗忘的风险。
 
 ## 学校教育的指责游戏
 
@@ -98,61 +100,61 @@ School may have a negligible impact on long-term memory. The horrible inefficien
 
 ### Caring at will
 
-### 随心所欲的关怀
+###  有意愿的关注
 
 The text provides an outline of a diagnosis. The term *"caring at will"* is used to describe the meta-cognitive ability to override the [learn drive](https://supermemo.guru/wiki/Learn_drive) and provide fake [valuations](https://supermemo.guru/wiki/Knowledge_valuation) that feed the memory systems in the process of [cramming](https://supermemo.guru/wiki/Cramming). Naturally, this [school-induced drive to learn](https://supermemo.guru/wiki/School_drive) is nothing but a [bad school habit](https://supermemo.guru/wiki/Bad_school_habit) that emasculates natural semantic valuations that underlie [intelligence](https://supermemo.guru/wiki/Intelligence). At school, nobody seems to care. Knowledge for the test is what counts.
 
-该文提供了一个诊断大纲。术语*"随意关心 "*被用来描述元认知能力，以推翻[学习动力](https://supermemo.guru/wiki/Learn_drive)，并提供虚假的[评价](https://supermemo.guru/wiki/Knowledge_valuation)，在[填鸭式](https://supermemo.guru/wiki/Cramming)的过程中为记忆系统提供营养。自然，这种[学校引起的学习动力](https://supermemo.guru/wiki/School_drive)只不过是一种[学校的坏习惯](https://supermemo.guru/wiki/Bad_school_habit)，它阉割了作为[智力](https://supermemo.guru/wiki/Intelligence)基础的自然语义评价。在学校，似乎没有人在乎。为考试而学的知识才是最重要的。
+该文提供了一个诊断大纲。术语*"有意愿的关注"*被用来描述元认知能力，以推翻[学习动力](https://supermemo.guru/wiki/Learn_drive)，并提供虚假的[评价](https://supermemo.guru/wiki/Knowledge_valuation)，在[死记硬背](https://supermemo.guru/wiki/Cramming)的过程中为记忆系统提供营养。自然，这种[学校引起的学习动力](https://supermemo.guru/wiki/School_drive)只不过是一种[学校的坏习惯](https://supermemo.guru/wiki/Bad_school_habit)，它阉割了作为[智力](https://supermemo.guru/wiki/Intelligence)基础的自然的语义估值。在学校，似乎没有人在乎。为考试而学的知识才是最重要的。
 
 If that healthy "inability to care" affects a large fraction of teenagers, we quickly understand the roots of [school hate](https://supermemo.guru/wiki/Why_do_kids_hate_school%3F). The problem can be explained by the demands of the [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network), individual [semantic distances](https://supermemo.guru/wiki/Semantic_distance), and [valuations](https://supermemo.guru/wiki/Knowledge_valuation). The text simplifies this neatly to *"layers of indirection"*:
 
-如果这种健康的 "无力关心 "影响了很大一部分青少年，我们很快就能理解[厌学](https://supermemo.guru/wiki/Why_do_kids_hate_school%3F)的根源。这个问题可以通过[知识评价网络](https://supermemo.guru/wiki/Knowledge_valuation_network)、个人[语义距离](https://supermemo.guru/wiki/Semantic_distance)和[评价](https://supermemo.guru/wiki/Knowledge_valuation)的要求来解释。该文将此简化为*"层层递进 "*：
+如果这种健康的 "无力关注" 影响了很大一部分青少年，我们很快就能理解[厌学](https://supermemo.guru/wiki/Why_do_kids_hate_school%3F)的根源。这个问题可以通过[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)、个人[语义距离](https://supermemo.guru/wiki/Semantic_distance)和[估值](https://supermemo.guru/wiki/Knowledge_valuation)的要求来解释。这篇文章干净利落地将其简化为*“层次分明的间接层”*：
 
 > A large fraction of teenagers lack the ability to direct **caring at will**. They can be made to understand why they should care about something in school, but there are too many layers of indirection between it and the impulses that can actually move them .... brains in neutral can still learn. They just can't do it on purpose
 >
 > 
 >
-> 很大一部分的青少年缺乏主导**随心所欲的关怀**的能力。可以让他们理解为什么他们应该在学校里关心某件事情，但是在它和能够真正推动他们的冲动之间有太多的暗示层....，处于中性的大脑仍然可以学习。他们只是不能故意这样做
+> 很大一部分的青少年缺乏主导**有意愿的关注**的能力。可以让他们理解为什么他们应该在学校里关注某件事情，但是在它和能够真正推动他们的冲动之间有太多的间接层....，处于中性状态的大脑仍然可以学习。他们只是不能有意这样做
 
 ### Baby steps
 
-### 小步
+### 一小步
 
 The importance of a short [semantic distance](https://supermemo.guru/wiki/Semantic_distance) is expressed with the term *"baby steps"*, which is worth memorizing for the sake of better elucidation of the harm of schooling:
 
-短[语义距离](https://supermemo.guru/wiki/Semantic_distance)的重要性是用*"小步"*这个词来表达的，为了更好地阐明学校教育的危害，这个词是值得记忆的：
+短[语义距离](https://supermemo.guru/wiki/Semantic_distance)的重要性是用*"一小步"*这个词来表达的，为了更好地阐明学校教育的危害，这个词是值得记忆的：
 
 > A good card for an **apathetic learner** will feel unneeded on creation, because it's only **a baby step away** from what they already knew
 >
 > 
 >
-> 对于一个**冷漠的学习者**来说，一张好的卡片在创作上会觉得不需要，因为它离他们已经知道的东西只有个**小步**了
+> 对于一个**漠然的学习者**来说，一张好的卡片在创作上会被觉得不需要，因为它离他们已经知道的东西只有**一小步**了
 
 It is worth noting that apathy should not be confused with [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness). What looks like apathy to a teacher may simply be a reflection of strong interests that find no outlet in the classroom.
 
-值得注意的是，冷漠不应该与[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)相混淆。在老师看来，冷漠可能只是反映了强烈的兴趣，但在课堂上却找不到出口。
+值得注意的是，漠然不应该与[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)相混淆。在老师看来，漠然可能只是反映了强烈的兴趣，但在课堂上却找不到发泄口。
 
-### 冷漠和注意力
+### 漠然和注意力
 
 What is seen as apathy or inattention can also be associated with an inherent problem of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). The schooled approach will ask for accumulating [items](https://supermemo.guru/wiki/Item) and reviewing them systematically. This might be the key reason for spaced repetition failure where users swear it does not work for them. Without [pleasure of learning](https://supermemo.guru/wiki/Pleasure_of_learning) and specific goals, repetitions became automatic reflexes of the mind. For users who make repetitions on the go, robotization of learning is worst. This is why I am not a fan of mobile SuperMemo. I tried that in the era of Pocket PC. Today, there is a simple remedy: [incremental reading](https://supermemo.guru/wiki/Incremental_reading). Interleaving spaced repetition with new reading. Combining review with novelty.
 
-被视为冷漠或注意力不集中的情况也可能与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的内在问题有关。学校的方法会要求积累[问答卡片](https://supermemo.guru/wiki/Item)，并系统地复习它们。这可能是间隔重复失败的关键原因，用户发誓这对他们不起作用。没有[学习的乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)和具体的目标，重复就成了头脑中的自动反射。对于那些在旅途中进行重复的用户来说，学习的机械化是最糟糕的。这就是为什么我不喜欢移动版的 SuperMemo。我在掌上电脑时代就尝试过。今天，有一个简单的补救办法：[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)。将间隔重复与新的阅读交织在一起。将复习与新奇相结合。
+被视为漠然或注意力不集中的情况也可能与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的内在问题有关。学校的方法会要求积累[问答卡片](https://supermemo.guru/wiki/Item)，并系统地复习它们。这可能是间隔重复失败的关键原因，用户发誓这对他们不起作用。没有[学习的乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)和具体的目标，重复就成了头脑中的自动反射。对于那些在旅途中进行重复的用户来说，学习的机械化是最糟糕的。这就是为什么我不喜欢移动版的 SuperMemo。我在掌上电脑时代就尝试过。今天，有一个简单的补救办法：[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)。将间隔重复与新的阅读交织在一起。将复习与新奇相结合。
 
 > Her name is Apathy, and she doesn't give a shit. You know how you can zone out and review something three or four times without processing it, but then you realize, kick yourself in gear, and engage yÍour faculties, pushing it into your mind? You have to care, just a little bit. To keep it up, you have to care a little bit more. It's not always easy to find and sustain that spark of caring, because the learning target might be only indirectly instrumental to your goals
 >
 > 
 >
-> 她的名字叫 "冷漠"，她不屑一顾。你知道你可以不顾一切地复习三四次而不去处理它，但后来你意识到了，把自己踢开，并调动你的能力，把它推入你的头脑？你必须要关心，只是一点点。为了保持它，你必须更关心一点。要找到并保持这种关心的火花并不容易，因为学习目标可能只是间接地有助于你的目标。
+> 她的名字叫 "漠然"，她不屑一顾。你知道吗，你可以在不处理某件事的情况下走神复习三四次，但之后你会意识到，把自己踢出档位，投入自己的能力，把它塞进你的脑海里？你必须关注，哪怕只有一点点。要保持下去，你必须多关注一点。找到并保持关注的火花并不总是容易的，因为学习目标可能只是间接地有助于你的目标
 
 ## 自然创造力周期
 
 The harm of the disrespect for the [circadian cycle](https://supermemo.guru/wiki/Circadian_cycle) and the madness of [early school hours](https://supermemo.guru/wiki/School_start_time) is nicely expressed as a progression from "crickets" to a "death spiral". Again, in [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), the process is measurable. All good leaners know this. All sleep researchers know it. And yet schools persist in torturing young brains and inflicting organic damage on the brain tissue:
 
-对[昼夜节律周期](https://supermemo.guru/wiki/Circadian_cycle)的不尊重和[早课时间](https://supermemo.guru/wiki/School_start_time)的疯狂，其危害很好地表达为从 "蟋蟀 "到 "死亡漩涡 "的进展。同样，在[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)中，这个过程是可测量的。所有优秀的瘦身者都知道这一点。所有睡眠研究者都知道这一点。然而，学校仍然坚持折磨年轻的大脑，对脑组织造成有机损害：
+对[昼夜节律周期](https://supermemo.guru/wiki/Circadian_cycle)的不尊重和[早课时间](https://supermemo.guru/wiki/School_start_time)的疯狂，其危害很好地表达为从 "一声不吭"到 "恶性循环 "的进展。同样，在[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)中，这个过程是可测量的。所有优秀的瘦身者都知道这一点。所有睡眠研究者都知道这一点。然而，学校仍然坚持折磨年轻的大脑，对脑组织造成有组织的损害：
 
 > I have one morning class where **eyelids hang low**, indifference runs high, and we can go several Anki cards in a row without anybody raising a hand. **Crickets herald a death spiral** where we can't review as many cards in a given period of time, and where don't spend as much time reviewing because the energy falls off more rapidly
 >
->  我有一节上午的课，**眼皮低垂**，漠不关心，我们可以连续打好几张 Anki 卡片而没有人举手。**蟋蟀预示着死亡螺旋**，我们不能在一定时间内复习那么多的卡片，也不能花那么多时间复习，因为精力下降得更快。
+>  我有一节上午的课，**眼皮低垂**，漠不关心，我们可以连续过好几张 Anki 卡片而没有人举手。**一声不吭预示着恶性循环**，我们不能在限定时间内复习那么多的卡片，也不能花那么多时间复习，因为精力下降得更快。
 
 ## 无意义的课程
 
@@ -166,7 +168,7 @@ In the cage of the classroom, the teacher is the boss, and she is the least like
 
 This phenomenon leads to a form of negative selection. Once the teacher collects enough evidence on the importance of student's choice; once she realizes that the rules and regulations deprive her of her best qualities in her role, she will demand change and is likely to be fired or quit. This is what happened to legendary opponents of [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) such as [John Taylor Gatto](https://supermemo.guru/wiki/John_Taylor_Gatto), [John Holt](https://supermemo.guru/wiki/John_Holt), [Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg), [Tom Durrie](https://supermemo.guru/wiki/Tom_Durrie), and many others.
 
-这种现象导致了一种消极的选择。一旦教师收集到足够的证据证明学生选择的重要性；一旦她意识到规则和条例剥夺了她在角色中的最佳品质，她就会要求改变，很可能会被解雇或辞职。这就是发生在[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)的传奇反对者身上的事情，如[John Taylor Gatto](https://supermemo.guru/wiki/John_Taylor_Gatto)、[John Holt](https://supermemo.guru/wiki/John_Holt)、[Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg)、[Tom Durrie](https://supermemo.guru/wiki/Tom_Durrie)，以及其他许多人。
+这种现象导致了一种消极的选择。一旦教师收集到足够的证据证明学生选择的重要性；一旦她意识到规则和条例剥夺了她在角色中的最佳品质，她就会要求改变，很可能会被解雇或辞职。这就是发生在[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)的传奇反对者身上的事情，如 [John Taylor Gatto](https://supermemo.guru/wiki/John_Taylor_Gatto)、[John Holt](https://supermemo.guru/wiki/John_Holt)、[Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg)、[Tom Durrie](https://supermemo.guru/wiki/Tom_Durrie)，以及其他许多人。
 
 The analytical mind of our Anki teacher reveals how the seed of that awareness are planted. The rest is a matter of personality. Some teachers grit their teeth and grind on in the belief that they are more useful in the class than on the streets. The bond with the students keeps them locked in, but their conscience will never stop the whispers:
 
@@ -176,7 +178,7 @@ The analytical mind of our Anki teacher reveals how the seed of that awareness a
 >
 > 
 >
-> 老教师们开始意识到，什么时候可以脱离书本，教一些不在本单元，甚至可能不在[课程](https://supermemo.guru/wiki/Curriculum)中的东西。也许是教正确的词来描述你所读到的一个生动的情况，或者是关于在某种差点发生的紧急情况下应该怎么做的建议。随着这一年的进展，我发现自己越来越经常地**我的直觉，因为我有一种新的自信，我可以把一个印象深刻的时刻变成一个**强烈的记忆，并用一张新的 Anki 卡片锁定它。**我甚至不关心它是否会出现在考试中**。这种洞察力让我**质疑大量我认为知道的关于组织课程的东西**。
+> 老教师们开始意识到，什么时候可以脱离书本，教一些不在本单元，甚至可能不在[课程](https://supermemo.guru/wiki/Curriculum)中的东西。也许是教正确的词来描述你所读到的一个生动的情况，或者是关于在某种差点发生的紧急情况下应该怎么做的建议。随着这一年的进展，我发现自己越来越经常地**迎合了我的直觉**，因为我有一种新的自信，我可以把一个印象深刻的时刻变成一个**强烈的记忆，并用一张新的 Anki 卡片锁定它**。**我甚至不关心它是否会出现在考试中**。这种洞察力让我**质疑大量我认为知道的关于组织课程的东西**。
 
 ## 自尊心
 
@@ -188,19 +190,19 @@ School has a knack for eroding self-esteem of nearly everyone but the very top d
 >
 > 
 >
-> 事实证明，容易的卡片真的很重要，因为它们可以给那些急需的学生带来胜利。当然，在十年级的班级里知道一张六年级水平的卡片并不是什么伟大的成就，但这个行动将原本消极的士气向上推升。而且它可以成为趋势。我可以在此基础上继续努力。其中有几个学生开始把 Anki 作为他们在课堂上做的事情，即使他们忽略了其他一切。**我可以自信地说出一个学生的名字，我确信他通过我的课只是因为 Anki**。不要误会我的意思，他只是勉强通过。大多数卡片都在他的头上。Anki 并不是奇迹，但它给了我和他一些工作上的帮助，而这是他前一年在我的课上失败时我们所没有的。
+> 事实证明，容易的卡片真的很重要，因为它们可以给那些急需的学生带来胜利。当然，在十年级的班级里知道一张六年级水平的卡片并不是什么伟大的成就，但这个行动将原本消极的士气向上推升。而且它可以成为趋势。我可以在此基础上继续努力。其中有几个学生开始把 Anki 作为他们在课堂上做的事情，即使他们忽略了其他一切。**我可以自信地说出一个学生的名字，我确信他通过我的课只是因为 Anki**。不要误会我的意思，他只是勉强通过。大多数卡片都还留在他的脑海中。Anki 并不是奇迹，但它给了我和他一些工作上的帮助，而这是他前一年在我的课上失败时我们所没有的。
 
 ## 智能
 
 The superiority of [incremental reading](https://supermemo.guru/wiki/Incremental_reading) over [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) is that it builds a coherent body of [abstract knowledge](https://supermemo.guru/wiki/Abstract_knowledge) where rules emerge from the [generalization](https://supermemo.guru/wiki/Generalization) of multiple sub-rules and facts. This generalization and crystallization process is very difficult to simulate with bare-bones spaced repetition. In [incremental reading](https://supermemo.guru/wiki/Incremental_reading), the process of reading, reasoning, creativity, creative elaboration, and writing, and are all interleaved with the [review](https://supermemo.guru/wiki/Review). This orchestrates all processes involved in the natural emergence of [intelligence](https://supermemo.guru/wiki/Intelligence). It is very hard to pause and pinpoint which facts or rules had a contribution to creative breakthroughs that change lives or underlie knowledge that chains into more breakthrough. The difficulty stems from the fact that [forgetting](https://supermemo.guru/wiki/Forgetting), [generalization](https://supermemo.guru/wiki/Generalization), and [memory optimization](https://supermemo.guru/wiki/Memory_optimization) are all process that occur spontaneously, over time, party in sleep, partly while doing unrelated things, or while doing nothing ("idle meditation"). It would be a teacher's dream to control this process, but it is a quick path to realization it is hardly possible. There are jobs that the brain must do with no outside intervention. Even worse, intervention is often the spanner in the works. Even the best teachers will not replace the need for autonomous thinking that requires unquestioned freedom and a great deal of time that school steals from young lives:
 
-与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)相比，[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的优势在于它建立了一个连贯的[抽象知识](https://supermemo.guru/wiki/Abstract_knowledge)体系，其中的规则是由多个子规则和事实的[泛化](https://supermemo.guru/wiki/Generalization)产生的。这种泛化和结晶的过程很难用光秃秃的间隔重复来模拟。在[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)中，阅读、推理、创造、创造性阐述和写作的过程，都与[复习](https://supermemo.guru/wiki/Review)交错进行。这协调了[智力](https://supermemo.guru/wiki/Intelligence)自然出现所涉及的所有过程。要暂停并确定哪些事实或规则对改变生活的创造性突破有贡献，或对连锁成更多突破的知识有贡献，是非常困难的。困难源于这样一个事实：[遗忘](https://supermemo.guru/wiki/Forgetting)、[泛化](https://supermemo.guru/wiki/Generalization)和[记忆优化](https://supermemo.guru/wiki/Memory_optimization)都是自发发生的过程，随着时间的推移，一方在睡眠中，部分在做无关的事情时，或在什么都不做时（"闲暇冥想"）。控制这个过程将是教师的梦想，但这是一条快速实现的道路，几乎不可能。有些工作，大脑必须在没有外界干预的情况下完成。更糟糕的是，干预往往是工作中的扳手。即使是最好的老师也不能取代自主思考的需要，而自主思考需要不受质疑的自由和大量的时间，学校从年轻人的生活中偷走了这些时间：
+与[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)相比，[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的优势在于它建立了一个连贯的[抽象知识](https://supermemo.guru/wiki/Abstract_knowledge)体系，其中的规则是由多个子规则和事实的[泛化](https://supermemo.guru/wiki/Generalization)产生的。这种泛化和结晶的过程很难用光秃秃的间隔重复来模拟。在[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)中，阅读、推理、创造、创造性阐述和写作的过程，都与[复习](https://supermemo.guru/wiki/Review)交错进行。这协调了[智力](https://supermemo.guru/wiki/Intelligence)自然出现所涉及的所有过程。要暂停并确定哪些事实或规则对改变生活的创造性突破有贡献，或对连锁成更多突破的知识有贡献，是非常困难的。困难源于这样一个事实：[遗忘](https://supermemo.guru/wiki/Forgetting)、[泛化](https://supermemo.guru/wiki/Generalization)和[记忆优化](https://supermemo.guru/wiki/Memory_optimization)都是自发的过程，随着时间的推移，一方在睡眠中，部分在做无关的事情时，或在什么都不做时（"闲暇冥想"）。控制这个过程将是教师的梦想，但这是一条几乎不可能的捷径。有些工作，大脑必须在没有外界干预的情况下完成。更糟糕的是，干预往往是捣乱。即使是最好的老师也不能取代自主思考的需求，而自主思考需要不受质疑的自由和大量的时间，学校从年轻人的生活中偷走了这些时间：
 
 > **[SRS](https://supermemo.guru/wiki/SRS) is inherently weak when it comes to the abstract and complex**. No card I've devised enables a student to develop a distinctive authorial voice, or write essay openings that reveal just enough to make the reader curious. Yes, you can make cards about strategies for this sort of thing, but these were consistently my worst cards — the overly difficult "leeches" that I eventually suspended from my decks
 >
 > 
 >
->  **[SRS](https://supermemo.guru/wiki/SRS)在涉及到抽象和复杂的问题时本质上是薄弱的**。我设计的任何卡片都不能使学生形成独特的作者声音，或写出的文章开篇恰好能让读者产生好奇心。是的，你可以制作关于这种事情的策略的卡片，但这些一直是我最糟糕的卡片--那些过于困难的 "水蛭"，我最终从我的卡组中暂停了。
+>  **[间隔重复软件](https://supermemo.guru/wiki/SRS)在涉及到抽象和复杂的问题时本质上是薄弱的**。我设计的任何卡片都不能使学生形成独特的作者声音，或写出的文章开篇恰好能让读者产生好奇心。是的，你可以制作关于这种事情的策略卡片，但这些一直是我最糟糕的卡片--那些过于困难的 "水蛭"，最终从我的牌组中暂停了。
 
 It is a bit like with gardening. A good gardener knows when to trim, what to plant, when to nourish, and how to make the garden look great. However, when it comes to the sheer strength of the ecosystem, nothing works as well as [diversity](https://supermemo.guru/wiki/Diversity) and non-intervention. No garden can compete on resilience with the rain forest.
 
@@ -232,7 +234,7 @@ I always thought that Anki had no [priority queue](https://supermemo.guru/wiki/P
 
 Breaks in learning evoke a [spacing effect](https://supermemo.guru/wiki/Spacing_effect) and might have benefits. However, for a [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) experiment with no rescheduling and overload tools, school calendar seems to be a destroyer of the good rhythm and harmony. The psychological effect of such fits and starts must be very damaging, even for a passionate teacher, let alone apathetic student. In [free learning](https://supermemo.guru/wiki/Free_learning), there is just a joy of exploration with little planning. At school, we always battle the effects of the checkered calendar, schedules and [curricula](https://supermemo.guru/wiki/Curriculum). Spaced repetition exposes that ruthlessly:
 
-学习中的休息时间会引起[间隔效应](https://supermemo.guru/wiki/Spacing_effect)，可能会有好处。然而，对于一个没有重新安排和超负荷工具的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)实验来说，校历似乎是良好节奏和和谐的破坏者。即使对一个充满激情的老师来说，这样的配合和启动的心理效果肯定是非常有害的，更不用说冷漠的学生。在[自由学习](https://supermemo.guru/wiki/Free_learning)中，只有探索的快乐，没有什么计划。在学校里，我们总是与格子日历、时间表和[课程](https://supermemo.guru/wiki/Curriculum)的影响作斗争。间隔重复将这种情况无情地暴露出来：
+学习中的休息时间会引起[间隔效应](https://supermemo.guru/wiki/Spacing_effect)，可能会有好处。然而，对于一个没有重新安排和超负荷工具的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)实验来说，校历似乎是良好节奏和和谐的破坏者。即使对一个充满激情的老师来说，这样的配合和启动的心理效果肯定是非常有害的，更不用说漠然的学生。在[自由学习](https://supermemo.guru/wiki/Free_learning)中，只有探索的快乐，没有什么计划。在学校里，我们总是与格子日历、时间表和[课程](https://supermemo.guru/wiki/Curriculum)的影响作斗争。间隔重复将这种情况无情地暴露出来：
 
 > We were able to recover from two weeks off in the fall readily enough, but just as we were about to catch up from the winter holidays we were beset upon by an equally lengthy spring break. Right on its heels was a short holiday week that was itself hounded by three full weeks of a special block-period testing schedule that saw each class meeting only three times a week
 >
@@ -250,7 +252,7 @@ Breaks in learning evoke a [spacing effect](https://supermemo.guru/wiki/Spacing_
 >
 > 
 >
-> 在[SRS](https://supermemo.guru/wiki/SRS)之前，我从未充分认识到每年暑假必须发生的学习损失
+> 在[间隔重复软件](https://supermemo.guru/wiki/SRS)之前，我从未充分认识到每年暑假必定发生的学习损失
 
 It is important to note that the loss of learning during summer breaks is actually an indictment of the entire concept of [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling). See: [Summer slide](https://supermemo.guru/wiki/Summer_slide_is_an_indictment_of_school)
 
@@ -266,17 +268,17 @@ It is important to note that the loss of learning during summer breaks is actual
 >
 > 
 >
-> 对你已经看过几十次的[卡片](https://supermemo.guru/wiki/Item)保持兴奋更难。我在复习课上穿的和蔼可亲的主持人性格中开始出现裂痕。我去年谈到的那*"冷漠的三分之一 "*的学生？这更像是**当我没有带来我的 "A "游戏时的冷漠的超级多数**
+> 对你已经见过几十次的[卡片](https://supermemo.guru/wiki/Item)保持兴奋更难。我在复习课上戴着的和蔼可亲的主持人性格中开始出现裂痕。我去年谈到的那*"漠然的三分之一 "*的学生？这更像是**当我没有拿出我的最佳表现时漠然的超级多数**
 
 Teachers find their passion in working with students. However, repetitiveness systematically destroys their passion for teaching the same material every year
 
-教师在与学生一起工作中找到他们的激情。然而，重复性系统地破坏了他们对每年教授相同材料的热情。
+教师在与学生一起工作中找到他们的激情。然而，重复系统地破坏了他们对每年教授相同材料的热情。
 
 ## 自主性的困境
 
 A teacher faces an ancient classroom dilemma: should he rely on students doing bad job, or ask them to imitate and risk them never learning independence. The obvious answer is [free learning](https://supermemo.guru/wiki/Free_learning). A student who wants to achieve a goal will learn on her own mistakes in due time. In the assembly line of school it is impossible.
 
-一个教师面临着一个古老的课堂困境：他应该依靠学生做坏事，还是要求他们模仿，让他们冒着永远学不会独立的风险。明显的答案是[自由学习](https://supermemo.guru/wiki/Free_learning)。一个想实现目标的学生会在适当的时候对自己的错误进行学习。在学校的流水线上，这是不可能的。
+一个教师面临着一个古老的课堂困境：他应该依赖做得不好的学生，还是要求他们模仿，让他们冒着永远不会独立学习的风险。明显的答案是[自由学习](https://supermemo.guru/wiki/Free_learning)。想要实现目标的学生会在适当的时候从自己的错误中吸取教训。在学校的流水线上，这是不可能的。
 
 > [I have] a growing apprehension that I'm not doing students any great favor by writing all of their cards for them. [...] I've gained a deeper appreciation for the difficulty of creating a truly good card, so much so that I'm hesitant to trust teenagers to do it even remotely well. So the question I keep asking myself is how to give students most of the benefits of participating in the card creation process without sacrificing the time-efficiency and card quality that come from a professional writing the cards
 >
@@ -292,45 +294,45 @@ Schools limit self-dependence in the quest for fake perfection
 
 Any great technology in a classroom risks a slow death by the loss of passion. The only effective learning is [free learning](https://supermemo.guru/wiki/Free_learning). It must be powered by the [learn drive](https://supermemo.guru/wiki/Learn_drive). A half-baked solution in a classroom can be sustained by a teacher's enthusiasm, but it dies slowly through a feedback loop. As results are not fully satisfactory, the passion wanes, and this adversely affects the result. The example of spaced repetition is just one of a million that have been tried over the last century in classrooms around the world. This is an endless banging of a head against an immovable wall. People like [John Holt](https://supermemo.guru/wiki/John_Holt), [Peter Gray](https://supermemo.guru/wiki/Peter_Gray), [Tom Durrie](https://supermemo.guru/wiki/Tom_Durrie) and others have known that for ever, but the mainstream of school system is oblivious. The use of colored cards in feedback is an example of a technology extra that adds some excitement for a while and then dies out on insufficient returns:
 
-课堂上任何伟大的技术都有可能因为激情的丧失而慢慢死亡。唯一有效的学习是[自由学习](https://supermemo.guru/wiki/Free_learning)。它必须由[学习动力](https://supermemo.guru/wiki/Learn_drive)来驱动。课堂上半生不熟的解决方案可以靠教师的热情来维持，但它会通过反馈回路慢慢死亡。由于结果并不完全令人满意，激情减退，这对结果产生了不利的影响。间隔重复的例子只是上个世纪在世界各地的教室里尝试过的一百万个例子中的一个。这是一种无休止地用头去撞一堵不动的墙的做法。像[约翰-霍尔特](https://supermemo.guru/wiki/John_Holt)、[彼得-格雷](https://supermemo.guru/wiki/Peter_Gray)、[汤姆-杜里](https://supermemo.guru/wiki/Tom_Durrie)等人一直都知道这一点，但学校系统的主流却视而不见。在反馈中使用彩色卡片是一个额外技术的例子，它在一段时间内增加了一些兴奋点，然后因回报不足而消亡：
+课堂上任何伟大的技术都有可能因为激情的丧失而慢慢死亡。唯一有效的学习是[自由学习](https://supermemo.guru/wiki/Free_learning)。它必须由[学习内驱力](https://supermemo.guru/wiki/Learn_drive)来驱动。课堂上不成熟的解决方案可以靠教师的热情来维持，但它会通过反馈回路慢慢死亡。由于结果并不完全令人满意，激情减退，这对结果产生了不利的影响。间隔重复的例子只是上个世纪在世界各地的教室里尝试过的一百万个例子中的一个。这是一种无休止地用头去撞一堵不动的墙的做法。像[约翰-霍尔特](https://supermemo.guru/wiki/John_Holt)、[彼得-格雷](https://supermemo.guru/wiki/Peter_Gray)、[汤姆-杜里](https://supermemo.guru/wiki/Tom_Durrie)等人一直都知道这一点，但学校系统的主流却视而不见。在反馈中使用彩色卡片是一个额外技术的例子，它在一段时间内增加了一些兴奋点，然后因回报不足而消亡：
 
 > By December, nearly every student had stopped holding up any color other than green, perhaps tiring of the small inconvenience of considering their personal relationship with a card and rotating it to the appropriate color. Once I felt like the quality of information I was getting from them was too low to justify those few seconds I spent soliciting the feedback on each card, I stopped asking for it. This may have been a mistake. I felt like engagement levels dropped off a bit after the switch and never recovered. I don't think it had to do with feeling de-voiced, since hardly anyone was still giving actual feedback via the cards. But I think the cards might have served as a participation priming device, keeping students in the Anki mindset by giving them a way to say “Amen”
 >
 > 
 >
-> 到了12月，几乎每个学生都不再举起绿色以外的任何颜色，也许是厌倦了考虑他们与卡片的个人关系并将其旋转到适当的颜色这一小小的不便。一旦我觉得我从他们那里得到的信息质量太低，不足以证明我花了几秒钟来征求每张卡片的反馈，我就不再要求他们这样做了。这可能是一个错误。我觉得在转换之后，参与度下降了一些，而且从未恢复。我不认为这与感觉被剥夺了发言权有关，因为几乎没有人仍然通过卡片提供实际反馈。但我认为卡片可能是一种参与的引子，通过给学生一种说 "阿门 "的方式让他们保持在 Anki 的思维模式中。
+> 到了 12 月，几乎每个学生都不再举起绿色以外的任何颜色，也许是厌倦了考虑他们与卡片的个人关系并将其旋转到适当的颜色这一小小的不便。一旦我觉得我从他们那里得到的信息质量太低，不足以证明我花了几秒钟来征求每张卡片的反馈，我就不再要求他们这样做了。这可能是一个错误。我觉得在转换之后，参与度下降了一些，而且从未恢复。我不认为这与感觉被剥夺了发言权有关，因为几乎没有人仍然通过卡片提供实际反馈。但我认为卡片可能是一种参与的引子，通过给学生一种说 "阿门 "的方式让他们保持在 Anki 的思维模式中。
 
 ## SuperMemo 不为人知
 
 Our insightful teacher came up with a great deal of nice ideas that might improve Anki, but was apparently unaware of the fact that nearly all his ideas had been implemented in SuperMemo as far back as in 1991.
 
-我们富有洞察力的老师想出了大量可能改进 Anki 的好点子，但显然没有意识到，他的几乎所有想法早在1991年就已经在 SuperMemo 中实现。
+我们富有洞察力的老师想出了大量可能改进 Anki 的好点子，但显然没有意识到，他的几乎所有想法早在 1991 年就已经在 SuperMemo 中实现了。
 
 The teacher was not aware of the role of the [forgetting index](https://supermemo.guru/wiki/Forgetting_index) (1991) and the [priority queue](https://supermemo.guru/wiki/Priority_queue) (2006) in SuperMemo. However, he clearly sensed the need for similar tools that would affect the [retrievability](https://supermemo.guru/wiki/Retrievability) of memory:
 
-这位老师不知道[遗忘指数](https://supermemo.guru/wiki/Forgetting_index)(1991)和[优先队列](https://supermemo.guru/wiki/Priority_queue)(2006)在SuperMemo中的作用。然而，他清楚地感觉到需要类似的工具来影响记忆的[可检索性](https://supermemo.guru/wiki/Retrievability)：
+这位老师不知道[遗忘指数](https://supermemo.guru/wiki/Forgetting_index)(1991)和[优先级队列](https://supermemo.guru/wiki/Priority_queue)(2006)在 SuperMemo 中的作用。然而，他清楚地感觉到需要类似的工具来影响记忆的[可提取性](https://supermemo.guru/wiki/Retrievability)：
 
 > For some information, the most valuable thing it can be doing is bouncing around in your near-subconscious, making itself a target for collision and fusion with other ideas. […] For still other information, you want it to retrieve itself instantly as a matter of reflex before you even become consciously aware of it. […] Think grammar error recognition. Muscle memory tasks. […] Different levels of availability require different rehearsal commitments. I've not seen any explicit support for varied automaticity goals in Anki or the other [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) programs I've played with
 >
 > 
 >
-> 对于某些信息来说，它最有价值的事情就是在你的近潜意识中跳来跳去，使自己成为与其他想法碰撞和融合的目标。[......]对于其他信息，你希望它能在你有意识地意识到它之前，作为一个反射性的问题立即检索出来。[......]想想语法错误识别。肌肉记忆任务。不同程度的可用性需要不同的排练承诺。在Anki或其他我玩过的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)程序中，我没有看到任何对不同自动性目标的明确支持
+> 对于某些信息来说，它最有价值的事情就是在你的浅层潜意识中跳来跳去，使自己成为与其他想法碰撞和融合的目标。[......]对于其他信息，你希望它能在你有意识地意识到它之前，作为一个反射性的问题立即提取出来。[......]想想语法错误识别。肌肉记忆任务。不同程度的可用性需要不同的排练承诺。在 Anki 或其他我玩过的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)程序中，我没有看到任何对不同自动化目标的明确支持
 
 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) allows of free [interval](https://supermemo.guru/wiki/Interval) change as of [Algorithm SM-11](https://supermemo.guru/wiki/Algorithm_SM-11) (2002). This fact was also not known to the teacher:
 
-从[算法SM-11](https://supermemo.guru/wiki/Algorithm_SM-11)(2002)开始，[SuperMemo](https://supermemo.guru/wiki/SuperMemo)允许自由的[间隔](https://supermemo.guru/wiki/Interval)变化。这个事实也是老师不知道的：
+从[算法 SM-11](https://supermemo.guru/wiki/Algorithm_SM-11)(2002)开始，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 允许自由的[间隔](https://supermemo.guru/wiki/Interval)变化。这个事实也是老师不知道的：
 
 > I think there is room in an [SRS](https://supermemo.guru/wiki/SRS) for buttons that reduce the next interval on a card without resetting it all the way back to zero
 >
 > 
 >
-> 我认为在[SRS](https://supermemo.guru/wiki/SRS)中，有空间可以让按钮减少卡片上的下一个间隔，而不需要将其全部重置为零
+> 我认为在 [SRS](https://supermemo.guru/wiki/SRS) 中，有空间可以让按钮减少卡片上的下一个间隔，而不需要将其全部重置为零
 
 ## 良好教学的力量
 
 Before anyone delves into [SRS](https://supermemo.guru/wiki/SRS) in a classroom, I might need to add a warning, and ask teachers to read "[Hating SuperMemo](https://supermemo.guru/wiki/Hating_SuperMemo)". However, in this particular case, it seems hard to imagine that any student could possibly be put off from [Anki](https://supermemo.guru/wiki/Anki). An utmost care was taken not to make review a burden. Perhaps some of those students will in the future get back to using [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) only to discover it works much better when it is executed on one's own, in peace, and driven by goals and passions
 
-在任何人在课堂上深入研究[SRS](https://supermemo.guru/wiki/SRS)之前，我可能需要添加一个警告，并请老师们阅读《[讨厌 SuperMemo](https://supermemo.guru/wiki/Hating_SuperMemo)》。然而，在这个特殊的案例中，似乎很难想象会有学生对[Anki](https://supermemo.guru/wiki/Anki)产生抵触。我们采取了最大的谨慎，不使复习成为一种负担。也许这些学生中的一些人将来会重新使用[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)，但他们会发现，当他们在目标和激情的驱使下，自己安静地执行时，效果会更好。
+在任何人在课堂上深入研究[间隔重复软件](https://supermemo.guru/wiki/SRS)之前，我可能需要补充一个警告，并请老师们阅读《[讨厌 SuperMemo](https://supermemo.guru/wiki/Hating_SuperMemo)》。然而，在这个特殊的案例中，似乎很难想象会有学生对 [Anki](https://supermemo.guru/wiki/Anki) 产生抵触。我们采取了最大的谨慎，不使复习成为一种负担。也许这些学生中的一些人将来会重新使用[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)，但他们会发现，当他们在目标和激情的驱动下，自己安静地执行时，效果会更好。
 
 ## 参见
 
