--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -8,7 +8,7 @@ October 2019
 
 Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligence. E.g., Douglas Engelbart, [Augmenting Human Intellect: A Conceptual Framework](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962).. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)..
 
-追溯现代计算机起源时，人们常常愿意讲述上世纪60年代和70年代的故事，那是一段黄金般的年代。故事中，远见卓识的先驱们追求一个梦想，即计算机能够成为强大的思想工具，也就是增强人类智力的工具。比如道格拉斯-恩格尔巴特写过[增强人类智力：一个概念框架](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962)。艾伦-凯是这些先驱者之一，他在写到个人电脑的潜力时，总结了这个梦想的乐观精神。"它（计算机）的应用将改变整个人类文明的思维模式 "艾伦-凯，[用户界面：个人观点](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)。
+追溯现代计算机起源时，人们常常愿意讲述上世纪60年代和70年代的故事，那是一段黄金般的年代。当时，远见卓识的先驱们追求一个梦想，即计算机能够成为强大的思想工具，也就是增强人类智力的工具。[^1]艾伦-凯是这些先驱之一，他在写到个人电脑的潜力时，总结了这个乐观的梦想。"它（计算机）的应用将改变整个人类文明的思维模式。"[^2]
 
 It’s an inspiring dream, which helped lead to modern interactive graphics, windowing interfaces, word processors, and much else. But retrospectively it’s difficult not to be disappointed, to feel that computers have not yet been nearly as transformative as far older tools for thought, such as language and writing. Today, it’s common in technology circles to pay lip service to the pioneering dreams of the past. But nostalgia aside there is little determined effort to pursue the vision of transformative new tools for thought.
 
@@ -1080,7 +1080,8 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 
 
 
-
+[^1]:道格拉斯-恩格尔巴特，[增强人类智力：一个概念框架](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962)
+[^2]:艾伦-凯，[用户界面：个人观点](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)。
 [^14]:Michael Nielsen, [Augmenting Long-term Memory](https://augmentingcognition.com/ltm.html) (2018), and Michael Nielsen, [Using spaced repetition systems to see through a piece of mathematics](http://cognitivemedium.com/srs-mathematics) (2019).迈克尔-尼尔森，[增强长期记忆](https://augmentingcognition.com/ltm.html) (2018)，以及迈克尔-尼尔森，[利用间隔重复系统看穿数学](http://cognitivemedium.com/srs-mathematics) (2019)。
 [^15]: **Note added December 9, 2019: This claim appears to be based on an error in our data analysis, and is now retracted. We’ve left the text in for historic reasons, but we no longer believe the claim. 2019年12月9日添加的注释：这一说法似乎是基于我们的数据分析中的一个错误，现在被收回。出于历史原因，我们保留了这段文字，但我们不再相信这一说法。**
 [^16]:Michael Nielsen, [Augmenting Long-Term Memory](https://augmentingcognition.com/ltm.html) (2018).迈克尔-尼尔森，[增强长期记忆](https://augmentingcognition.com/ltm.html) (2018)
