修正符号 && 脚注

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -6,9 +6,9 @@ October 2019
 
 2019年10月
 
-Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligence. E.g., Douglas Engelbart, [Augmenting Human Intellect: A Conceptual Framework](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962).. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)..
+Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligence[^1]. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”[^2].
 
-追溯现代计算机起源时，人们常常愿意讲述上世纪60年代和70年代的故事，那是一段黄金般的年代。当时，远见卓识的先驱们追求一个梦想，即计算机能够成为强大的思想工具，也就是增强人类智力的工具。[^1]艾伦-凯是这些先驱之一，他在写到个人电脑的潜力时，总结了这个乐观的梦想。"它（计算机）的应用将改变整个人类文明的思维模式。"[^2]
+追溯现代计算机起源时，人们常常愿意讲述上世纪60年代和70年代的故事，那是一段黄金般的年代。当时，远见卓识的先驱们追求一个梦想，即计算机能够成为强大的思想工具，也就是增强人类智力的工具[^1]。艾伦-凯是这些先驱之一，他在写到个人电脑的潜力时，总结了这个乐观的梦想："它（计算机）的应用将改变整个人类文明的思维模式。"[^2]
 
 It’s an inspiring dream, which helped lead to modern interactive graphics, windowing interfaces, word processors, and much else. But retrospectively it’s difficult not to be disappointed, to feel that computers have not yet been nearly as transformative as far older tools for thought, such as language and writing. Today, it’s common in technology circles to pay lip service to the pioneering dreams of the past. But nostalgia aside there is little determined effort to pursue the vision of transformative new tools for thought.
 
